[project]
name = "openenv-project"
version = "0.1.0"
description = "Mini grid RL environment with OpenEnv"
authors = [{ name = "Venugopal Chepuri" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"